feat(wordpress): update version to 3.4.0-beta2
- Bump WordPress chart version to 3.4.0-beta2
- Change URL in advanced.values.yaml to example.com
- Add memcached plugin configuration in advanced2.values.yaml
- Update memcached container name in deployment.yaml

--- a/charts/wordpress/samples/advanced.values.yaml
+++ b/charts/wordpress/samples/advanced.values.yaml
@@ -52,7 +52,7 @@ wordpress:
   configExtraSecret:
     name: "wordpress-test-secret"
   htaccessConfigMap: "wordpress-custom-config"
-  url: "http://192.168.178.31:30111"
+  url: "https://example.com"
 service:
   nodePorts:
     http: 30111
