--- a/charts/wordpress/templates/configmap.yaml
+++ b/charts/wordpress/templates/configmap.yaml
@@ -12,7 +12,7 @@ data:
     {{- if .Values.apache.customDefaultSiteConfig }}
     {{ .Values.apache.customDefaultSiteConfig | nindent 4 }}
     {{- else if .Values.metrics.apache.enabled }}
-    <VirtualHost *:{{ .Values.service.ports.http }}>
+    <VirtualHost *:{{ .Values.containerPorts.http }}>
             ServerAdmin webmaster@localhost
             <Location "/server-status">
                     SetHandler server-status
@@ -23,7 +23,7 @@ data:
             CustomLog ${APACHE_LOG_DIR}/access.log combined
     </VirtualHost>
     {{- else }}
-    <VirtualHost *:{{ .Values.service.ports.http }}>
+    <VirtualHost *:{{ .Values.containerPorts.http }}>
             ServerAdmin webmaster@localhost
             DocumentRoot /var/www/html
 
@@ -37,7 +37,7 @@ data:
     {{- if .Values.apache.customPortsConfig }}
     {{ .Values.apache.customPortsConfig | nindent 4 }}
     {{- else }}
-    Listen {{ .Values.service.ports.http }}
+    Listen {{ .Values.containerPorts.http }}
     {{- end }}
   {{- end }}
   {{- if (not .Values.apache.customPhpConfigMap) }}
