feat(helm): add Redis and Valkey cache support
- Implement Redis and Valkey cache backends
- Add configuration options for Redis and Valkey
- Introduce wp_with_plugins function for WP-CLI
- Enhance init script for Redis object cache
- Update values schema and default values for new features
- Ensure mutual exclusivity of cache backends

--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 3.4.0-beta2
+version: 3.4.0-beta3
 appVersion: "6.9.1" # renovate: image=docker.io/wordpress
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,10 +26,12 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: fixed
-      description: "Providing now full memcached functionality."
+    - kind: changed
+      description: "Init container: Fixed permissions only apply when using rwx storage. No root access required for init script when using rwo storage."
     - kind: fixed
       description: "Init script: Blog title (blogname) update is fixed and now reliably applied via wp option update."
+    - kind: fixed
+      description: "Memcached: Providing now full memcached functionality."
     - kind: changed
       description: "Memcached: Automatically inject guarded WP_CACHE define when memcached config is enabled."
     - kind: added
@@ -40,6 +42,14 @@ annotations:
       description: "Memcached: Harden memcached runtime setup via extension bootstrap init container (memcache + memcached) and staged shared libraries."
     - kind: changed
       description: "Memcached: Enforce memcached plugin drop-in mode (object-cache.php) and avoid normal activation conflicts in init workflow."
+    - kind: added
+      description: "Redis: Added Redis as alternative caching option using cloudpirates-redis chart and redis-cache plugin."
+    - kind: added
+      description: "Valkey: Added Valkey (Redis fork) as alternative caching option using cloudpirates-valkey chart and redis-cache plugin."
+    - kind: added
+      description: "Redis/Valkey: Automatically inject WP_REDIS_HOST, WP_REDIS_PORT, and optional WP_REDIS_PASSWORD into wp-config.php."
+    - kind: added
+      description: "Redis/Valkey: Add WP_CACHE_KEY_SALT support with precedence: explicit value, existing Secret reference, persisted generated value."
   artifacthub.io/images: |
     - name: wordpress
       image: docker.io/wordpress:6.9.1-php8.3-apache
@@ -51,11 +61,23 @@ annotations:
       image: docker.io/mariadb:12.2.2-noble
     - name: memcached
       image: docker.io/memcached:1.6.40
+    - name: redis
+      image: docker.io/redis:8.6.0-trixie
+    - name: valkey
+      image: docker.io/valkey/valkey:9.0.2-trixie
 dependencies:
   - condition: memcached.enabled
     name: memcached
     repository: oci://registry-1.docker.io/cloudpirates
     version: 0.10.0
+  - condition: redis.enabled
+    name: redis
+    repository: oci://registry-1.docker.io/cloudpirates
+    version: 0.23.0
+  - condition: valkey.enabled
+    name: valkey
+    repository: oci://registry-1.docker.io/cloudpirates
+    version: 0.17.0
   - condition: mariadb.enabled
     name: mariadb
     repository: oci://registry-1.docker.io/cloudpirates
