--- a/charts/wordpress/templates/secret.yaml
+++ b/charts/wordpress/templates/secret.yaml
@@ -19,33 +19,18 @@ data:
   {{/* are NOT injected here. They are written directly into wp-config.php by 'wp core multisite-convert' */}}
   {{/* in the init container and persist on the PVC. Injecting them here would cause PHP warnings */}}
   {{/* about already-defined constants. */}}
-  {{/* Add memcached config when enabled */}}
-  {{- $memcachedCreateConfig := .Values.memcached.createConfig }}
-  {{- if hasKey .Values.memcached "createconfig" }}
-  {{- $memcachedCreateConfig = .Values.memcached.createconfig }}
-  {{- end }}
-  {{- if and .Values.memcached.enabled $memcachedCreateConfig }}
+  {{- include "wordpress.cache.validateSelection" . }}
+  {{- $cacheBackends := (include "wordpress.cache.backends" . | fromYaml) }}
+  {{- /* Add cache config for the selected backend (exactly one backend can be enabled) */}}
+  {{- if and (eq $cacheBackends.selected "memcached") $cacheBackends.memcachedCreateConfig }}
   {{- $inject = printf "%sif (!defined('WP_CACHE')) { define('WP_CACHE', true); }" $inject }}
-  {{- $cacheKeySalt := .Values.memcached.cacheKeySalt | default "" }}
-  {{- if and (eq $cacheKeySalt "") .Values.memcached.cacheKeySaltSecret.name }}
-  {{- $cacheKeySaltSecret := lookup "v1" "Secret" .Release.Namespace .Values.memcached.cacheKeySaltSecret.name }}
-  {{- if not $cacheKeySaltSecret }}
-  {{- fail (printf "memcached.cacheKeySaltSecret.name '%s' not found in namespace '%s'" .Values.memcached.cacheKeySaltSecret.name .Release.Namespace) }}
-  {{- end }}
-  {{- $cacheKeySaltKey := .Values.memcached.cacheKeySaltSecret.key | default "WP_CACHE_KEY_SALT" }}
-  {{- if not (hasKey $cacheKeySaltSecret.data $cacheKeySaltKey) }}
-  {{- fail (printf "memcached.cacheKeySaltSecret.key '%s' not found in secret '%s'" $cacheKeySaltKey .Values.memcached.cacheKeySaltSecret.name) }}
-  {{- end }}
-  {{- $cacheKeySalt = (index $cacheKeySaltSecret.data $cacheKeySaltKey | b64dec) }}
-  {{- end }}
-  {{- if eq $cacheKeySalt "" }}
-  {{- $existingSecret := lookup "v1" "Secret" .Release.Namespace (include "wordpress.fullname" .) }}
-  {{- if and $existingSecret (hasKey $existingSecret.data "WORDPRESS_CACHE_KEY_SALT") }}
-  {{- $cacheKeySalt = (index $existingSecret.data "WORDPRESS_CACHE_KEY_SALT" | b64dec) }}
-  {{- else }}
-  {{- $cacheKeySalt = randAlphaNum 48 }}
-  {{- end }}
-  {{- end }}
+  {{- $cacheKeySalt := (include "wordpress.cache.resolveSalt" (dict
+        "ctx" .
+        "backend" "memcached"
+        "valueSalt" (.Values.memcached.cacheKeySalt | default "")
+        "secretName" .Values.memcached.cacheKeySaltSecret.name
+        "secretKey" (.Values.memcached.cacheKeySaltSecret.key | default "WP_CACHE_KEY_SALT")
+      ) | fromYaml).salt }}
   WORDPRESS_CACHE_KEY_SALT: {{ $cacheKeySalt | b64enc }}
   {{- $inject = printf "%sdefine('WP_CACHE_KEY_SALT', '%s');" $inject (replace "'" "\\'" $cacheKeySalt) }}
   {{- $memcachedServerGroups := .Values.memcached.serverGroups | default dict }}
@@ -64,6 +49,64 @@ data:
   {{- $memcfg = printf "$memcached_servers = array('default' => array('%s:%v'));\n" (include "wordpress.memcached.fullname" .) (.Values.memcached.service.port) }}
   {{- end }}
   {{- $inject = printf "%s%s" $inject $memcfg }}
+  {{- else if or (eq $cacheBackends.selected "redis") (eq $cacheBackends.selected "valkey") }}
+  {{- $cacheMeta := (include "wordpress.cache.kvMeta" (dict "ctx" . "backend" $cacheBackends.selected) | fromYaml) }}
+  {{- if $cacheMeta.createConfig }}
+  {{- $inject = printf "%sif (!defined('WP_CACHE')) { define('WP_CACHE', true); }" $inject }}
+  {{- $cacheKeySalt := (include "wordpress.cache.resolveSalt" (dict
+        "ctx" .
+        "backend" $cacheMeta.backend
+        "valueSalt" $cacheMeta.cacheKeySalt
+        "secretName" $cacheMeta.cacheKeySaltSecretName
+        "secretKey" $cacheMeta.cacheKeySaltSecretKey
+      ) | fromYaml).salt }}
+  WORDPRESS_CACHE_KEY_SALT: {{ $cacheKeySalt | b64enc }}
+  {{- $inject = printf "%sdefine('WP_CACHE_KEY_SALT', '%s');" $inject (replace "'" "\\'" $cacheKeySalt) }}
+  {{- $scaling := ($cacheMeta.scaling | default dict) }}
+  {{- $scalingType := (default "none" $scaling.type) }}
+  {{- if eq $scalingType "none" }}
+  {{- $inject = printf "%sdefine('WP_REDIS_HOST', '%s');define('WP_REDIS_PORT', %v);" $inject $cacheMeta.host $cacheMeta.port }}
+  {{- else if eq $scalingType "replication" }}
+  {{- $servers := ($scaling.servers | default list) }}
+  {{- if eq (len $servers) 0 }}{{- fail (printf "%s.scaling.type=replication requires %s.scaling.servers with at least one entry" $cacheMeta.backend $cacheMeta.backend) }}{{- end }}
+  {{- $serverEntries := list }}
+  {{- range $servers }}
+  {{- $serverEntries = append $serverEntries (printf "'%s'" (replace "'" "\\'" .)) }}
+  {{- end }}
+  {{- $inject = printf "%sdefine('WP_REDIS_CLIENT', 'predis');define('WP_REDIS_SERVERS', array(%s));" $inject (join ", " $serverEntries) }}
+  {{- else if eq $scalingType "sharding" }}
+  {{- $shards := ($scaling.shards | default list) }}
+  {{- if eq (len $shards) 0 }}{{- fail (printf "%s.scaling.type=sharding requires %s.scaling.shards with at least one entry" $cacheMeta.backend $cacheMeta.backend) }}{{- end }}
+  {{- $shardEntries := list }}
+  {{- range $shards }}
+  {{- $shardEntries = append $shardEntries (printf "'%s'" (replace "'" "\\'" .)) }}
+  {{- end }}
+  {{- $inject = printf "%sdefine('WP_REDIS_CLIENT', 'phpredis');define('WP_REDIS_SHARDS', array(%s));" $inject (join ", " $shardEntries) }}
+  {{- else if eq $scalingType "sentinel" }}
+  {{- $servers := ($scaling.servers | default list) }}
+  {{- $sentinel := ($scaling.sentinel | default "") }}
+  {{- if eq (len $servers) 0 }}{{- fail (printf "%s.scaling.type=sentinel requires %s.scaling.servers with at least one entry" $cacheMeta.backend $cacheMeta.backend) }}{{- end }}
+  {{- if eq $sentinel "" }}{{- fail (printf "%s.scaling.type=sentinel requires %s.scaling.sentinel" $cacheMeta.backend $cacheMeta.backend) }}{{- end }}
+  {{- $serverEntries := list }}
+  {{- range $servers }}
+  {{- $serverEntries = append $serverEntries (printf "'%s'" (replace "'" "\\'" .)) }}
+  {{- end }}
+  {{- $inject = printf "%sdefine('WP_REDIS_CLIENT', 'predis');define('WP_REDIS_SENTINEL', '%s');define('WP_REDIS_SERVERS', array(%s));" $inject (replace "'" "\\'" $sentinel) (join ", " $serverEntries) }}
+  {{- else if eq $scalingType "cluster" }}
+  {{- $cluster := ($scaling.cluster | default list) }}
+  {{- if eq (len $cluster) 0 }}{{- fail (printf "%s.scaling.type=cluster requires %s.scaling.cluster with at least one entry" $cacheMeta.backend $cacheMeta.backend) }}{{- end }}
+  {{- $clusterEntries := list }}
+  {{- range $cluster }}
+  {{- $clusterEntries = append $clusterEntries (printf "'%s'" (replace "'" "\\'" .)) }}
+  {{- end }}
+  {{- $inject = printf "%sdefine('WP_REDIS_CLIENT', 'phpredis');define('WP_REDIS_CLUSTER', array(%s));" $inject (join ", " $clusterEntries) }}
+  {{- else }}
+  {{- fail (printf "%s.scaling.type '%s' is invalid. Supported: none, replication, sharding, sentinel, cluster" $cacheMeta.backend $scalingType) }}
+  {{- end }}
+  {{- if $cacheMeta.authEnabled }}
+  {{- $inject = printf "%sif (getenv('WP_REDIS_PASSWORD') !== false && getenv('WP_REDIS_PASSWORD') !== '') { define('WP_REDIS_PASSWORD', getenv('WP_REDIS_PASSWORD')); }" $inject }}
+  {{- end }}
+  {{- end }}
   {{- end }}
   {{- if and (not .Values.wordpress.configExtraConfigMap.name) (not .Values.wordpress.configExtraSecret.name) }}
   {{/* No external source: combine user configExtra (if any) + inject into WORDPRESS_CONFIG_EXTRA */}}
