--- a/charts/wordpress/samples/memcached.values.yaml
+++ b/charts/wordpress/samples/memcached.values.yaml
@@ -1,5 +1,3 @@
-replicaCount: 2
-
 wordpress:
   init:
     enabled: true
@@ -20,6 +18,11 @@ wordpress:
       autoupdate: true
     - name: "cache-enabler"
       activate: true
+      autoupdate: true
+    # Memcached Object Cache is used in drop-in mode (object-cache.php),
+    # so the plugin should stay inactive to avoid wp_cache_* redeclare errors.
+    - name: "memcached"
+      activate: false
       autoupdate: true
     - name: "autoptimize"
       activate: true
@@ -54,10 +57,7 @@ service:
   nodePorts:
     http: 30111
 storage:
-  storageClass: "longhorn"
   resourcePolicy: "" # Delete PVC on helm uninstall
-  accessModes:
-    - ReadWriteMany
 apache:
   customPhpConfigMap: "wordpress-custom-config"
 metrics:
@@ -75,3 +75,13 @@ mariadb:
     database: "wordpress_db"
     username: "wordpress_db_user"
     existingSecret: "wordpress-test-secret"
+memcached:
+  enabled: true
+  createConfig: true
+  # Optional: configure cache-group-specific Memcached backends.
+  # If serverGroups is empty, chart falls back to the embedded memcached service.
+  # serverGroups:
+  #   default:
+  #     - "wp-memcached:11211"
+  #   options:
+  #     - "wp-memcached:11211"
